﻿V6.3 "More Kopernicus - New Horizons"
	Added support for New Horizons Kopernicus planet mod.
	Changed default science to be related to distance from home world, rather than the planet order from the Sun.
	Fixed Integration settings for ResearchBodies mod to correct discovery messages for the galaxies and start-up parameters.
V6.2 "Kopernicus, Science & other Enhancements/Fixes"
	Changed Telescope Cameras to now show the SkyBox and Atmosphere shading. Skybox zooms proportional to the Camera zoom (no more pixelated skybox).
	Skybox Camera Zooming can be disabled completely by manually changing the Config.cfg file field ZoomSkyBox to False.
	Fixed scroll window in the TST settings menu.
	Added Maximum number of ChemCam contracts setting to TST settings menu (was in config file, but not in in-game menu). - Only available in Career mode.
	Added Restrict ChemCam Contracts setting to TST settings menu (was in config file, but not in in-game menu).- Only available in Career mode.
	TST settings can now switch between ToolBar mod Icon and AppLauncher (Stock) Icon immediately without requiring a scene change.
	TST settings will now recognise when ToolBar is removed and change to the Stock Icon by default.
	More robust Science checking when taking pictures - capture failures and better logging in error situations.
	Fixed Remote Tech integration - Requires V 1.7 and up of Remote Tech.
	Sigma Binary internal Bodies (not the actual bodies) should no longer appear in the Targets list for the Telescopes.
	Fixed Contracts system for when Kopernicus is installed but NOT OPM (will just use a list of the bodies in order to generate contracts).
	Made sure ChemCam contracts won't generate for ANY Gas Giants, or for Water Biomes. (Removed Gas Giants from Config file, can now determine this in-game).
	Fixed typo in Module Manager files for OPM and RSS science definitions.
	Added KSPedia pages for TST.