@@ -4,6 +4,6 @@
 "DOWNLOAD":"http://spacedock.info/mod/143/Tarsier%20Space%20Technology%20with%20Galaxies%20Continued...",
 "VERSION":{"MAJOR":6,"MINOR":3,"PATCH":0,"BUILD":0},
 "KSP_VERSION":{"MAJOR":1,"MINOR":1,"PATCH":3},
-"KSP_VERSION_MIN":{"MAJOR":1,"MINOR":1,"PATCH":2},
+"KSP_VERSION_MIN":{"MAJOR":1,"MINOR":1,"PATCH":3},
 "KSP_VERSION_MAX":{"MAJOR":1,"MINOR":1,"PATCH":3}
 }
